--- a/contrat-adoption.html
+++ b/contrat-adoption.html
@@ -69,8 +69,84 @@
     </script>
     
     <div class="content">
-        <h1>Contrat d'adoption</h1>
-        <p>Ceci est le contenu de la page</p>
+        <div class="contrat_titre">
+            <div class="contrat_titre_texte">
+                <h1>VOUS SOUHAITEZ <br> ADOPTER?</h1>
+            </div>
+        </div>
+        <div class="espaceur50"></div>
+        <h2 class="h2centre or bloc_centre">Le contrat d'adoption fixe les engagements réciproques entre l'adoptant et l'association, l'objectif étant de garantir au mieux les intérêts de l'animal.</h2>
+        <div class="espaceur50"></div>
+        <div class="contrat_texte1">
+            <div class="espaceur100"></div>
+            <p>
+                L'adoption est un engagement de longue durée, qui doit correspondre à toute la vie de l'animal
+                <br><br>
+                L'association donne toutes les informations dont elle dispose, afin d'informer au mieux l'adoptant 
+                <br><br>
+                Cependant, elle ne connaît pas avec certitude tout le passé du chien ou du chat qui a été abandonné.
+            </p>
+            <div class="espaceur100"></div>
+        </div>
+        <div class="espaceur30"></div>
+        <div class="bloc_centre adopt_2column">
+            <img src="images/rda(40).webp">
+            <p>
+                Elle ne peut apporter toutes les garanties qu'exigent parfois certains candidats à l'adoption.﻿
+                <br><br>
+                En prenant un être vivant, l'adoptant doit l'accepter tel qu'il est, avec ses qualités et ses défauts, son état de santé, son comportement...
+                <br>Il l'assume pleinement 
+                <br>Le chien ou le chat adopté doit vivre au sein de la famille, et avoir sa place dans la maison.
+                <br><br>
+                Les chiens ne doivent pas être attachés, enfermés dans un chenil ou vivre au garage 
+                <br>Le jardin doit être suffisamment clotûré pour prévenir toute fugue
+                <br>Les chats doivent vivre dans la maison avec possibilité de sortir (sauf les chats d'appartement)
+            </p>
+        </div>
+        <div class="espaceur30"></div>
+        <div class="bloc_centre adopt_2column">
+            
+            <p>
+                Tout animal doit recevoir la nourriture adaptée, l'entretien d'hygiène et les soins vétérinaires nécessaires ( vaccins, vermifuges, antiparasitaires, traitements des maladies, etc...)
+                <br>
+                <br>Les chatons doivent obligatoirement être stérilisés à l'âge de 6 mois .
+                <br>Les chiots doivent etre obligatoirement stérilisés entre 6 mois et 1 an, selon la race.
+                <br>Un chèque de caution est remis lors de l'adoption, et annulé après l'envoi d'un certificat vétérinaire de stérilisation.
+                <br>
+                <br>Il est strictement interdit de donner ou vendre l'animal. Si l'adoptant est dans l'obligation de s'en séparer, il doit en informer l'association, qui le reprendra ou validera le changement de propriétaire proposé par l'adoptant.
+            </p>
+            <img src="images/rda(41).webp">
+        </div>
+        <div class="espaceur30"></div>
+        <div class="bloc_centre adopt_2column">
+            <img src="images/rda(42).webp">
+            <p>
+                Ces obligations ont uniquement pour but de protéger l'animal, en le confiant à des personnes responsables, et désireuses de lui offrir une belle vie.
+                <br>Une participation financière est demandée lors de chaque adoption. 
+                <br>
+                <br>Elle permet à l'association de faire face à l'entretien des animaux et  aux frais vétérinaires ( vaccins, identifications, stérilisations, vermifuges, soins divers...).
+                <br>Elle est donc indispensable pour financer le fonctionnement du refuge. 
+                <br>Elle engage également l'adoptant, en lui demandant un effort financier. 
+                <br>Elle peut ainsi éviter des adoptions non réfléchies
+            </p>
+        </div>
+        <div class="espaceur30"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <footer>
         <div class="logo logo_footer">
