--- a/temoignages-adoptants.html
+++ b/temoignages-adoptants.html
@@ -87,7 +87,7 @@
                 <h2>Voyou & Ruby</h2>
                 <br>
                 <p>
-                    "Nous avons adopté voyou et ruby au radeau des animaux de Ferel. Nous avons été très bien accueilli par les personnes du refuge. Visite à la maison pour être sur de nos adoptions ce qui est tout à fait normal car un animal c'est pour toute la vie. Pour voyou et Rubis la vie est belle et confortable beaucoup d amour dans les 2 sens.un réelle bonheur pour nos deux amour. Il faut beaucoup de patience pour eux car ils leur a fallu beaucoup de temps pour s adapter à leur nouvelle vie. A part ruby qui a mis moins de temps à se sentir chez elle. Merci au refuge de nous avoir fait confiance "
+                    "Nous avons adopté voyou et ruby au radeau des animaux de Ferel.<br> Nous avons été très bien accueilli par les personnes du refuge. <br>Visite à la maison pour être sur de nos adoptions ce qui est tout à fait normal car un animal c'est pour toute la vie. <br>Pour voyou et Rubis la vie est belle et confortable beaucoup d amour dans les 2 sens.un réelle bonheur pour nos deux amour. <br>Il faut beaucoup de patience pour eux car ils leur a fallu beaucoup de temps pour s adapter à leur nouvelle vie. A part ruby qui a mis moins de temps à se sentir chez elle.<br><br> Merci au refuge de nous avoir fait confiance "
                 </p>
             </div>
         </div>
@@ -115,8 +115,8 @@
                 <h2>Gigi</h2>
                 <br><br>
                 <p>
-                    Des nouvelles de Gigi, jeune chatte timide et réservée au refuge.
-                    Pour mémoire : Gigi, jeune chatte errante, est arrivée au refuge au mois de septembre 2024 avec ses minuscules chatons. Elle a été une maman très attentionnée, douce et patiente. Ses chatons ont tous été adoptés. Puis est venu son tour. Elle vit, actuellement, le parfait bonheur avec des maîtres qui l'adorent. "...Tout se passe très bien depuis le début de son adoption ... Elle est très gentille, toujours un peu coquine... Elle est très belle, un peu gourmande ...Elle est très heureuse de faire son petit tour à l'extérieur plusieurs fois par jour et est très obéissante pour rentrer à la maison... Nous l'aimons beaucoup et sommes très heureux avec elle ..."
+                    Des nouvelles de Gigi, jeune chatte timide et réservée au refuge.<br>
+                    Pour mémoire : Gigi, jeune chatte errante, est arrivée au refuge au mois de septembre 2024 avec ses minuscules chatons. <br>Elle a été une maman très attentionnée, douce et patiente. <br>Ses chatons ont tous été adoptés. Puis est venu son tour. <br>Elle vit, actuellement, le parfait bonheur avec des maîtres qui l'adorent. "...Tout se passe très bien depuis le début de son adoption ... Elle est très gentille, toujours un peu coquine... Elle est très belle, un peu gourmande ...<br>Elle est très heureuse de faire son petit tour à l'extérieur plusieurs fois par jour et est très obéissante pour rentrer à la maison... <br><br>Nous l'aimons beaucoup et sommes très heureux avec elle ..."
                 </p>
             </div>
         </div>
