--- a/contrat-adoption.html
+++ b/contrat-adoption.html
@@ -130,9 +130,20 @@
                 <br>Elle peut ainsi éviter des adoptions non réfléchies
             </p>
         </div>
-        <div class="espaceur30"></div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre contrat_adopt">
+            <h2> VOUS SOUHAITEZ ADOPTER ?</h2>
+            <div class="espaceur50"></div>
+            <a href="documents/Questionnaire-adoption-chien" download class="btn_orange">Questionnaire d'Adoption</a>
+            <div class="espaceur50"></div>
+            <div class="contrat_btn2">
+                <a href="documents/Certificat-engagement-chien.doc" download class="btn_orange btndecontrat">Certificat D'Engaggement d'un Chien</a>
+                <a href="documents/Certificat-engagement-chat" download class="btn_orange btndecontrat">Certificat D'Engaggement d'un Chat</a>
+            </div>
+            
 
-
+        </div>
+        <div class="espaceur50"></div>
 
 
 
